# saaga-mcp-servers

./: .aliases.sh  .env.example  .gitignore  .gitmodules  CLAUDE.md  MISSION.md  README.md  ai_pitch_deck.md  docker-compose.yml  grand_vision.md  pyproject.toml
.claude/: agents.sh  settings.local.json
.claude/commands/: coms.md  delegate.md  do.md  document.md
.claude/commands/dev/: agents.md  make_mcp.md
.claude/commands/ea/: email.md  list_availability.md  start_day.md  unsubscribe.md
.claude/commands/ec/: convo_agent_url.md  google_doc.md  make_doc.md
.claude/commands/rec/: filter_rank.md  make_interviewer.md
.claude/commands/spirit/: command.md  evolve.md
.claude/system_prompts/: dev.md  ea.md  ec.md  recruiter.md  spirit.md
docs/: claude-code-email-cleanup-guide.md  email-management-prototype-report.md
spirit/: lambdaverse_specification_v1.md  turing_machine_lambdaverse.py  turing_machine_lambdaverse_v2.py
spirit/.claude/: settings.local.json
src/saaga_mcp_servers/: __init__.py
src/saaga_mcp_servers/agents/ambient/: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/saaga_mcp_servers/agents/ambient/.claude/: settings.local.json
src/saaga_mcp_servers/agents/ambient/ambient_old/: __init__.py  cli.py  config_loader.py  main.py
src/saaga_mcp_servers/agents/ambient/ambient_old/config/: do.md  settings.py
src/saaga_mcp_servers/agents/ambient/ambient_old/utils/: transcriber.py
src/saaga_mcp_servers/agents/ambient/config/mcp_servers/: filtered_mcp_config.json
src/saaga_mcp_servers/agents/ambient/docs/: 01_vision.md  02_technical_specification.md  03_sprint_plan.md  04_claude_command_builder.md
src/saaga_mcp_servers/agents/ambient/src/ambient/: __main__.py  cli.py  config.py  main.py  process_manager.py
src/saaga_mcp_servers/agents/ambient/src/ambient/config/: MCP_Servers_and_Tools.md  README.md  __init__.py  do.md  settings.py
src/saaga_mcp_servers/agents/ambient/src/ambient/config/prompts/: procurement.md
src/saaga_mcp_servers/agents/ambient/src/ambient/lib/: agent_runner.py
src/saaga_mcp_servers/agents/ambient/src/ambient/lib/claude/: __init__.py  claude_process.py  cmd_builder.py
src/saaga_mcp_servers/agents/ambient/src/ambient/lib/claude/command_args/: command_builder.py  do_jira_prompt.py  example_usage.py  graph.py  structured_output.py
src/saaga_mcp_servers/agents/ambient/src/ambient/lib/claude/prompt/: procurement.py
src/saaga_mcp_servers/agents/ambient/src/ambient/lib/jira/: client.py
src/saaga_mcp_servers/agents/ambient/src/ambient/utils/: transcriber.py
src/saaga_mcp_servers/base/: .env.example  README.md  pyproject.toml
src/saaga_mcp_servers/base/docs/: 01_Vision.md  02_Technical_Requirements.md  03_Tech_Stack.md  04_User_Stories.md
src/saaga_mcp_servers/base/src/saaga_mcp_base/: __init__.py  __main__.py
src/saaga_mcp_servers/base/src/saaga_mcp_base/base/: base_mcp.py
src/saaga_mcp_servers/base/src/saaga_mcp_base/config/: env.py
src/saaga_mcp_servers/base/src/saaga_mcp_base/lib/: exceptions.py  logging.py  parallelize.py
src/saaga_mcp_servers/base/src/saaga_mcp_base/lib/datetime/: cli.py
src/saaga_mcp_servers/base/src/saaga_mcp_base/lib/datetime/tools/: datetime.py  wiat.py
src/saaga_mcp_servers/base/src/saaga_mcp_base/lib/scheduler/: README.md  __init__.py
src/saaga_mcp_servers/base/src/saaga_mcp_base/lib/scheduler/core/: __init__.py  celery_app.py  decorators.py  processes.py  redis_client.py
src/saaga_mcp_servers/base/src/saaga_mcp_base/lib/scheduler/tools/: celery.py
src/saaga_mcp_servers/db/: README.md
src/saaga_mcp_servers/development/: README.md
src/saaga_mcp_servers/docs/: Capabilities.md
src/saaga_mcp_servers/operations/: README.md
src/saaga_mcp_servers/operations/mcp-gsuite/: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/saaga_mcp_servers/operations/mcp-gsuite/.claude/: settings.local.json
src/saaga_mcp_servers/operations/mcp-gsuite/docs/: 01_Vision.md  New_Features.md
src/saaga_mcp_servers/operations/mcp-gsuite/logs/: .gitignore
src/saaga_mcp_servers/operations/mcp-gsuite/src/mcp_gsuite/: __init__.py  __main__.py
src/saaga_mcp_servers/operations/mcp-gsuite/src/mcp_gsuite/config/: env.py  logging.py
src/saaga_mcp_servers/operations/mcp-gsuite/src/mcp_gsuite/lib/: accounts.py  admin.py  calendar.py  gmail.py
src/saaga_mcp_servers/operations/mcp-gsuite/src/mcp_gsuite/lib/auth/: credentials.py  google_auth_flow.py  utils.py
src/saaga_mcp_servers/operations/mcp-gsuite/src/mcp_gsuite/tools/: auth.py
src/saaga_mcp_servers/operations/mcp-gsuite/src/mcp_gsuite/tools/admin/: get_user_activity_report.py
src/saaga_mcp_servers/operations/mcp-gsuite/src/mcp_gsuite/tools/calendar/: create_event.py  delete_event.py  get_colors.py  get_events.py  list_calendars.py  update_event.py
src/saaga_mcp_servers/operations/mcp-gsuite/src/mcp_gsuite/tools/gmail/: create_draft.py  create_label.py  create_reply.py  get_attachment.py  get_email_by_id.py  get_gmail_logs.py  query_emails.py  send_draft.py  set_email_labels.py  update_draft.py
src/saaga_mcp_servers/utils/mcp-researcher/: config.example.yaml  pyproject.toml
src/saaga_mcp_servers/utils/mcp-researcher/.claude/: settings.local.json
src/saaga_mcp_servers/utils/mcp-researcher/src/mcp_researcher/: __init__.py
src/saaga_mcp_servers/utils/mcp-researcher/src/mcp_researcher/cli/: config.py  main.py
src/saaga_mcp_servers/utils/mcp-researcher/src/mcp_researcher/core/: config.py  constants.py  logging.py  services.py
src/saaga_mcp_servers/utils/mcp-researcher/src/mcp_researcher/mcp/: __init__.py  server.py  tools.py
src/saaga_mcp_servers/utils/mcp_gemini/: CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml
src/saaga_mcp_servers/utils/mcp_gemini/.claude/: settings.local.json
src/saaga_mcp_servers/utils/mcp_gemini/mcp_gemini/: __init__.py  config.py  logging_config.py
src/saaga_mcp_servers/utils/mcp_gemini/mcp_gemini/client/: __init__.py  app.py  gemini_test.py
src/saaga_mcp_servers/utils/mcp_gemini/mcp_gemini/server/: __init__.py  app.py
src/saaga_mcp_servers/utils/mcp_gemini/mcp_gemini/tools/: gemini.py
(+19 files in other folders)
