[project]
name = "saaga-mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Oseen", email = "amovfx@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["src/saaga_mcp_servers/utils/mcp-researcher"]
